--- a/ReportPage.html
+++ b/ReportPage.html
@@ -58,7 +58,7 @@ Givit (www.givit.org.au) lets you donate funds to different charities, with cate
 Australian Charity Guide is another similar site where you can find a charity you are interested in.  Again, animal welfare, children, homelessness, health, human rights, LGBTI and victims of disaster.<br>
 The main difference between these current Australian donation websites and Choice Charitie is that Choice Charities will be far more user friendly, functional, and transparent.<br>
 Choice Charities will have a map of Australia showing the location of each charity.  The other thing that separates our website from the others is that we will have information for each charity with information about where the money is going, i.e. administration costs or advertisement costs.<br>
-If successful, Choice charities will be a leading web application that helps connect donors with charities.<br>
+If successful, Choice charities will be a leading web application that helps connect donors with charities.<br><br><br><br>
 
 
 									
