--- a/ReportPage.html
+++ b/ReportPage.html
@@ -84,6 +84,18 @@ Choice Charities will have a map of Australia showing the location of each chari
 If successful, Choice charities will be a leading web application that helps connect donors with charities.<br><br>
 
 									<hr class="major" />
+									
+									<h3>Detailed Description</h3>
+										<h2>Aims</h2>
+Our main objective is to utilize our skill sets to better our country in a way that lets experts do the work that they specialize in, as we realise that while we could make contributions through physical work such as volunteering, we may be able to help more by working in a digital setting. We would achieve this by focusing on providing and developing a web-based platform to promote and share charities and community projects across Australia, thus making it simple and easy for users to make donations and contributions to a variety of works going on around the country.<br>
+To achieve this goal there will be a road of challenges to overcome, to be able to navigate this road we will need a plan to guide us and make sure we know where we are heading, what we have completed and what we still need to get done. <br>
+									•	Our first main task will be to develop a detailed and concise timeframe detailing the task that will need to be completed to achieve our goal. This timeframe will need to include information such as, who will be completing which tasks, how long they should take, when they should be completed by, how they will need to be implemented and incorporated with the other tasks, and more. Once we have this timeframe, we will be able to keep on track and make sure we are well within our deadlines.<br>
+									•	The next milestone will be to develop a series of wireframe mock-ups that we can use to build our project based off. These will be relatively simple in nature but will provide valuable insight into how our site will be laid out, how it will function on a basic level and also give us as creators a tangible goal or objective that we can see and work towards. This will also have the added advantage of functioning as artifacts to show how we have progressed.<br>
+									•	After this we will have to turn our attention to beginning to form this into an actual site, this will most likely first entail either developing a temple or acquiring one from online. Once this is done, we can start making this template represent our previously created wireframe mock-ups. This will make the site presentable and provide insight to potential investors or stakeholders of how our final product will look, as well as enabling us to acquire feedback on potential changes or improvements that we can make.<br>
+									•	Once the site looks the part, we can then focus on functionality. This component will most likely be quite time consuming as it will require us to do a great deal of developing, coding, troubleshooting, debugging and then finally, implementing it into our site. Depending on how much time we use completing the previous objectives we may even struggle to get the site fully operational before our deadline. In the event that this does happen, we will need to priorities our key functionalities and possibly cut out unnecessary features, however if we can stick to our timeframe and manage our workload effectively we should be able to achieve our mission on time.<br>
+									<br>
+
+									<hr class="major" />
 
 
 
