--- a/Donation.html
+++ b/Donation.html
@@ -80,6 +80,7 @@
 														"svgPath": "M8.944,1C11.976,1,14.718,2.588,15.99,5.064C17.264,2.589,20.039,1,23.072,1C27.811,1,34.166,4.82,31.272,15.242C27.966,25.43,15.99,31.419,15.99,31.417C15.99,31.419,4.033,25.43,0.726,15.242C-2.168,4.82,4.205,1,8.944,1C8.944,1,8.944,1,8.944,1",
 														"color": "rgba(225,32,190,0.8)",
 														"scale": 1
+														window.location.href = "Payment.html";
 													},
 													{
 														"selectable": true,
