--- a/Donation.html
+++ b/Donation.html
@@ -250,6 +250,8 @@
 											}
 										});
 								</script>
+								
+								<a href="/The_IT_World/Payment.html" class="button big">Ready to Pay?</a>
 							</head>
 							<body style="margin: 0;background-color: rgba(80,80,80,1);">
 								<div id="map" style="width: 100%; height: 937px;"></div>
