--- a/ReportPage.html
+++ b/ReportPage.html
@@ -338,9 +338,8 @@ tr:nth-child(even) {
     <td> </td>
     <td> iPhone </td>
   </tr>
-<table>
   <tr>
-    <th>Q How did you find the experience of using the website to complete the task of selecting a charity and donating? </th>
+    <th>How did you find the experience of using the website to complete the task of selecting a charity and donating? </th>
     <th> </th>
     <th> Extremely easy, straight to the point and visual ease of selection.
 </th>
