--- a/ReportPage.html
+++ b/ReportPage.html
@@ -339,42 +339,42 @@ tr:nth-child(even) {
     <td> iPhone </td>
   </tr>
   <tr>
-    <th>How did you find the experience of using the website to complete the task of selecting a charity and donating? </th>
-    <th> </th>
-    <th> Extremely easy, straight to the point and visual ease of selection.
-</th>
+    <td>How did you find the experience of using the website to complete the task of selecting a charity and donating? </td>
+    <td> </td>
+    <td> Extremely easy, straight to the point and visual ease of selection.
+</td>
   </tr>
 <table>
   <tr>
-    <th> What did you think of the layout of the content ( The map and the layout of the website) ? </th>
-    <th> </th>
-    <th> Very simple design and easy to navigate for choice. The hearts are a nice touch.
-</th>
+    <td> What did you think of the layout of the content ( The map and the layout of the website) ? </th>
+    <td> </td>
+    <td> Very simple design and easy to navigate for choice. The hearts are a nice touch.
+</td>
   </tr>
 <table>
   <tr>
-    <th> What did you think of the on-page explanations? </th>
-    <th> </th>
-    <th> Informative and simple.
-</th>
+    <td> What did you think of the on-page explanations? </td>
+    <td> </td>
+    <td> Informative and simple.
+</td>
   </tr>
 <table>
   <tr>
-    <th> What was your overall impression of the Choice Charities Website?</th>
-    <th> </th>
-    <th> I found it to be quite easy on the eyes and lacks confusion; helps browsing and surfing to make for easy choices. The website is very easy to understand with no complexity.</th>
+    <td> What was your overall impression of the Choice Charities Website?</td>
+    <td> </td>
+    <td> I found it to be quite easy on the eyes and lacks confusion; helps browsing and surfing to make for easy choices. The website is very easy to understand with no complexity.</td>
   </tr>
 <table>
   <tr>
-    <th> What would you change if you had the choice? </th>
-    <th> </th>
-    <th> Possibly add more colour to the layout of the website.</th>
+    <td> What would you change if you had the choice? </td>
+    <td> </td>
+	  <td> Possibly add more colour to the layout of the website.</td>
   </tr>
 <table>
   <tr>
-    <th> How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </th>
-    <th> </th>
-    <th> There is no heavy marketing on the website to donate as opposed to other charities. Also, very easy to browse and simple design as opposed to the remainder.</th>
+    <td>How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </th>
+    <td></th>
+    <td> There is no heavy marketing on the website to donate as opposed to other charities. Also, very easy to browse and simple design as opposed to the remainder.</td>
   </tr>
 
 </table>
