--- a/ReportPage.html
+++ b/ReportPage.html
@@ -346,7 +346,7 @@ tr:nth-child(even) {
   </tr>
 <table>
   <tr>
-    <td> What did you think of the layout of the content ( The map and the layout of the website) ? </th>
+    <td> What did you think of the layout of the content ( The map and the layout of the website) ? </td>
     <td> </td>
     <td> Very simple design and easy to navigate for choice. The hearts are a nice touch.
 </td>
@@ -372,8 +372,8 @@ tr:nth-child(even) {
   </tr>
 <table>
   <tr>
-    <td>How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </th>
-    <td></th>
+    <td>How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </td>
+    <td></td>
     <td> There is no heavy marketing on the website to donate as opposed to other charities. Also, very easy to browse and simple design as opposed to the remainder.</td>
   </tr>
 
