Hopefully Final Fix To results table

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -341,42 +341,33 @@ tr:nth-child(even) {
   <tr>
     <td>How did you find the experience of using the website to complete the task of selecting a charity and donating? </td>
     <td> </td>
-    <td> Extremely easy, straight to the point and visual ease of selection.
-</td>
+    <td> Extremely easy, straight to the point and visual ease of selection </td>
   </tr>
-<table>
   <tr>
     <td> What did you think of the layout of the content ( The map and the layout of the website) ? </td>
     <td> </td>
-    <td> Very simple design and easy to navigate for choice. The hearts are a nice touch.
-</td>
+    <td> Very simple design and easy to navigate for choice. The hearts are a nice touch.</td>
   </tr>
-<table>
   <tr>
     <td> What did you think of the on-page explanations? </td>
     <td> </td>
-    <td> Informative and simple.
-</td>
+    <td> Informative and simple.</td>
   </tr>
-<table>
   <tr>
     <td> What was your overall impression of the Choice Charities Website?</td>
     <td> </td>
     <td> I found it to be quite easy on the eyes and lacks confusion; helps browsing and surfing to make for easy choices. The website is very easy to understand with no complexity.</td>
   </tr>
-<table>
   <tr>
     <td> What would you change if you had the choice? </td>
     <td> </td>
 	  <td> Possibly add more colour to the layout of the website.</td>
   </tr>
-<table>
   <tr>
     <td>How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </td>
     <td></td>
     <td> There is no heavy marketing on the website to donate as opposed to other charities. Also, very easy to browse and simple design as opposed to the remainder.</td>
   </tr>
-
 </table>
 
 							
