--- a/ReportPage.html
+++ b/ReportPage.html
@@ -457,6 +457,38 @@ Codebots.com. 2020. What Are The 10 Biggest Risks In Software Development?. [onl
 									<hr class="major" />
 									<h2>Group Reflection</h2>
 									
+	
+	<b>Group Reflection – Tom</b>
+<br>
+
+Once again I would say that the group has performed very well again during this assignment.<br>
+Everyone has chipped in and made an even contribution to the group.  Each member has done their own work, had a go at chairing the meeting and contributed in the classroom.<br>
+Everyone was present at all the meetings.<br>
+There were some differences in the skill levels of the group, though.<br>
+For instance, Dillon and Nathan are in their final year of Uni.  So that it is expected that they would be more knowledgeable about web design java script and CSS and so forth.<br>
+Communication within the group went well.  Everyone knows where they fit in within the workload and knows their role and what work they are responsible for.<br>
+The thing we did improve on is making video conferences instead of just audio ones.<br>
+The surprising thing for me was how strange it is relying on MS teams during covid 19 restrictions.  It is pretty isolating at times, but then there is a group of people who have never met before who have to work together for a common goal.  I think this is good.<br>
+The thing I learned about groups is the same as before.  Group dynamics.  At the start we weren’t sure where we all fit in.  Then after a few meetings, we got to know each other and we knew where we fit in amongst the group.<br>
+	<br><br><br><br>
+						<div id="sidebar">
+<b>At Least one thing you learned about groups </b><br>
+In the last assignment I reflected on how I learned about group dynamics.  At first members were uncertain of where they fit in.  As the group progressed people seemed to form and take on rolls.<br>
+Even though this happed, I learned that everyone has something positive to contribute. Everyone.<br>
+This was expressed when we took turns in reporting to the class or when we took turns in chairing one of our meetings.  Everyone has the ability to show leadership and to be prepared and to make a worthwhile contribution.  Even those who would normally be quieter.<br>
+This was partly because of a “good team vibe” that we had, as everyone in the group was patient and respecting.  If this is what professional teams in the IT industry are like, I would look forward to this as a career.<br>
+<br>
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 									
 								</section>
 
