--- a/ReportPage.html
+++ b/ReportPage.html
@@ -497,7 +497,7 @@ This was partly because of a “good team vibe” that we had, as everyone in th
 	</p><br><br>
 	
 <b>Remember to include in your section on Tools how well you think your GitHub log of activity reflects your group’s work on this assignment. - Geoff</b><br>
-<span class="image main"><img src="images/report.jpg" alt="" /></span><br>
+<span class="image main"><img src="images/LogsReport_Reflection.png" alt="" /></span><br>
 <p>
 Here are some logs to prove that we are working fine together.
 These logs are just regarding to my areas (Geoffrey). 
