--- a/ReportPage.html
+++ b/ReportPage.html
@@ -472,13 +472,6 @@ The thing we did improve on is making video conferences instead of just audio on
 The surprising thing for me was how strange it is relying on MS teams during covid 19 restrictions.  It is pretty isolating at times, but then there is a group of people who have never met before who have to work together for a common goal.  I think this is good.<br>
 The thing I learned about groups is the same as before.  Group dynamics.  At the start we weren’t sure where we all fit in.  Then after a few meetings, we got to know each other and we knew where we fit in amongst the group.<br>
 	<br><br><br><br>
-					
-<b>At Least one thing you learned about groups </b><br>
-In the last assignment I reflected on how I learned about group dynamics.  At first members were uncertain of where they fit in.  As the group progressed people seemed to form and take on rolls.<br>
-Even though this happed, I learned that everyone has something positive to contribute. Everyone.<br>
-This was expressed when we took turns in reporting to the class or when we took turns in chairing one of our meetings.  Everyone has the ability to show leadership and to be prepared and to make a worthwhile contribution.  Even those who would normally be quieter.<br>
-This was partly because of a “good team vibe” that we had, as everyone in the group was patient and respecting.  If this is what professional teams in the IT industry are like, I would look forward to this as a career.<br>
-<br>
 	
 <b>Individual - Geoff</b><br>
 	<p>
@@ -495,8 +488,17 @@ This was partly because of a “good team vibe” that we had, as everyone in th
 	Hopefully, we’re able to meet again on campus later on.
 	End of words, I’ll just wish you all good luck for everything that you will do in the future. 	
 	</p><br><br>
+					
+<b>At Least one thing you learned about groups </b><br>
+In the last assignment I reflected on how I learned about group dynamics.  At first members were uncertain of where they fit in.  As the group progressed people seemed to form and take on rolls.<br>
+Even though this happed, I learned that everyone has something positive to contribute. Everyone.<br>
+This was expressed when we took turns in reporting to the class or when we took turns in chairing one of our meetings.  Everyone has the ability to show leadership and to be prepared and to make a worthwhile contribution.  Even those who would normally be quieter.<br>
+This was partly because of a “good team vibe” that we had, as everyone in the group was patient and respecting.  If this is what professional teams in the IT industry are like, I would look forward to this as a career.<br>
+<br>
 	
-<b>Remember to include in your section on Tools how well you think your GitHub log of activity reflects your group’s work on this assignment. - Geoff</b><br>
+
+	
+<b>Remember to include in your section on Tools how well you think your GitHub log of activity reflects your group’s work on this assignment.</b><br>
 <span class="image main"><img src="images/LogsReport_Reflection.png" alt="" /></span><br>
 <p>
 Here are some logs to prove that we are working fine together.
