--- a/ReportPage.html
+++ b/ReportPage.html
@@ -368,7 +368,75 @@ tr:nth-child(even) {
     <td></td>
     <td> There is no heavy marketing on the website to donate as opposed to other charities. Also, very easy to browse and simple design as opposed to the remainder.</td>
   </tr>
-</table>
+</table><br><br>
+	
+<table>
+  <tr>
+    <th>Question</th>
+    <th>Respondent</th>
+    <th>Answer</th>
+  </tr>
+  <tr>
+    <td> How old are you?</td>
+    <td>Yovita</td>
+    <td>18</td>
+  </tr>
+  <tr>
+    <td> When was the last time you purchased an item online? </td>
+    <td></td>
+    <td>August 2020</td>
+  </tr>
+  <tr>
+    <td> Have you ever used Choice Charities? </td>
+    <td> </td>
+    <td> Haven’t</td>
+  </tr>
+  <tr>
+    <td> How often do you shop online? </td>
+    <td></td>
+    <td> Rarely</td>
+  </tr>
+  <tr>
+    <td> How confident are you with browsing, shopping, or other online shopping-related tasks? </td>
+    <td> </td>
+    <td> Very Confident.</td>
+  </tr>
+  <tr>
+    <td> Which device(s) do you usually use for online shopping? </td>
+    <td> </td>
+    <td> A phone </td>
+  </tr>
+  <tr>
+    <td>How did you find the experience of using the website to complete the task of selecting a charity and donating? </td>
+    <td> </td>
+    <td> It’s easy to use and not complicated, clear enough </td>
+  </tr>
+  <tr>
+    <td> What did you think of the layout of the content ( The map and the layout of the website) ? </td>
+    <td> </td>
+    <td> It looks great and simple </td>
+  </tr>
+  <tr>
+    <td> What did you think of the on-page explanations? </td>
+    <td> </td>
+    <td>  Easy to understand </td>
+  </tr>
+  <tr>
+    <td> What was your overall impression of the Choice Charities Website?</td>
+    <td> </td>
+    <td>It is a good website, and I will recommend it to a friend.</td>
+  </tr>
+  <tr>
+    <td> What would you change if you had the choice? </td>
+    <td> </td>
+	  <td> More colours on the website.</td>
+  </tr>
+  <tr>
+    <td>How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </td>
+    <td></td>
+    <td> The website content is delivered in a simple and understandable way. It is not repetitive and allow the user to use it without getting confused.</td>
+  </tr>
+</table><br><br>
 
 							
 									<hr class="major" />
