--- a/ReportPage.html
+++ b/ReportPage.html
@@ -689,7 +689,16 @@ The thing I learned about groups is the same as before.  Group dynamics.  At the
 	Hopefully, we’re able to meet again on campus later on.
 	End of words, I’ll just wish you all good luck for everything that you will do in the future. 	
 	</p><br><br>
-					
+	
+	<b>Individual - Adair</b><br>
+	<p>
+		This group have worked together in a respectful and collaborative manner. We have had all team members at all meetings and most classes. Something I’ve really appreciated is the way group members have been willing to work around each other’s schedules. If there was a meeting scheduled and a team has had something came up in their private life meaning they could no longer make it, all the other team members worked to find another time appropriate for everyone. I’ve always felt like my voice was heard and my opinion was appreciated. It's been a really fun and empowering environment for me to work in as an introduction to the world of IT. It’s also been great getting the chance to work alongside team members that are reaching the end of an experience I have only recently begun. Being more familiar with each other this assignment as opposed to assignment 2 meant that we could really work off each other strengths. If there was something, we were struggling with we could access the other team members knowledge or go directly to a team member we knew could help in a particular area. I’ll be sad to say goodbye to my group once we’ve finished the presentation but hope to work with some of them on future group projects in other subjects. 
+	</p><br><br>
+	
+	<b>What went well  </b>
+	<p>Communication between the group became more fluid this assessment meaning that our meetings became more productive. As we became more familiar with each other it allowed for us to have better discussions and all team members had the confidence to put ideas forward. We once again approached the assignment with a rough timeline of when we needed to have certain elements done. This allowed team members to work on certain things requiring more attention the necessary time while maintaining confidence that we would all be finished when necessary. The blend of experience in the team was again beneficial as team members had the opportunity to pick the parts of the assignment that worked off their personal strengths. Each member took their turn to chair a meeting, meaning this pressure was shared evenly amongst all group members. 
+</p><br>
+		
 <b>At Least one thing you learned about groups </b><br>
 In the last assignment I reflected on how I learned about group dynamics.  At first members were uncertain of where they fit in.  As the group progressed people seemed to form and take on rolls.<br>
 Even though this happed, I learned that everyone has something positive to contribute. Everyone.<br>
