--- a/Education.html
+++ b/Education.html
@@ -43,7 +43,7 @@
 									<br>
 									<p>I hope this helps you make the right choice when it comes to sharing your good fortune around and thanks for all your charitable contributions.</p>
 									
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
+									<span class="image main"><img src="images/heartHands.jpg" alt="" width"150" height"100"/></span>
 								
 							</section>
 
