--- a/Education.html
+++ b/Education.html
@@ -18,7 +18,7 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo">
-										<img src="images/Logo-Extra.jpg" alt="Logo-Extra">
+										<img src="images/Logo-Extra.jpg" alt="Logo-Extra" width="100%" height="auto">
 									</a>
 									<ul class="icons">
 										<li><a href="/The_IT_World/UnderConstruction.html" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -43,7 +43,7 @@
 									<br>
 									<p>I hope this helps you make the right choice when it comes to sharing your good fortune around and thanks for all your charitable contributions.</p>
 									<br><br>
-									<span class="image main"><img src="images/heartHands.jpg" alt="" width"150" height"100"/></span>
+									<span class="image main"><img src="images/heartHands.jpg" alt="" width="100%" height="auto"/></span>
 								
 							</section>
 
