Kens Testing Results

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -505,7 +505,77 @@ tr:nth-child(even) {
     <td></td>
     <td> The website content is delivered in a simple and understandable way. It is not repetitive and allow the user to use it without getting confused.</td>
   </tr>
-</table><br><br>
+</table>
+<table>
+	  <tr>
+	    <th>Question</th>
+	    <th>Respondent</th>
+	    <th>Answer</th>
+	  </tr>
+
+<tr>
+	    <td> How old are you?</td>
+	    <td>Ken</td>
+	    <td>65</td>
+	  </tr>
+	  <tr>
+	    <td> When was the last time you purchased an item online? </td>
+	    <td></td>
+	    <td>Last week</td>
+	  </tr>
+	  <tr>
+	    <td> Have you ever used Choice Charities? </td>
+	    <td> </td>
+	    <td> Just discovered the site</td>
+	  </tr>
+	  <tr>
+	    <td> How often do you shop online? </td>
+	    <td></td>
+	    <td> Once a month.</td>
+	  </tr>
+	  <tr>
+	    <td> How confident are you with browsing, shopping, or other online shopping-related tasks? </td>
+	    <td> </td>
+	    <td> Fair to good .</td>
+	  </tr>
+	  <tr>
+	    <td> Which device(s) do you usually use for online shopping? </td>
+	    <td> </td>
+	    <td> Laptop </td>
+	  </tr>
+	  <tr>
+	    <td>How did you find the experience of using the website to complete the task of selecting a charity and donating? </td>
+	    <td> </td>
+	    <td> Great.  One issue I had was making sure that my donation went to the Charity I selected.  Once I selected the charity on the map, there was no confirmation that that was where the money was going to go to. </td>
+	  </tr>
+	  <tr>
+	    <td> What did you think of the layout of the content ( The map and the layout of the website) ? </td>
+	    <td> </td>
+	    <td> Map is great.  However, an improvement would be to have an option to go straight to the donate page without having to go to the map, and from there being able to select a charity from a drop down box.</td>
+	  </tr>
+	  <tr>
+	    <td> What did you think of the on-page explanations? </td>
+	    <td> </td>
+	    <td> Good</td>
+	  </tr>
+	  <tr>
+	    <td> What was your overall impression of the Choice Charities Website?</td>
+	    <td> </td>
+	    <td> Very good.</td>
+	  </tr>
+	  <tr>
+	    <td> What would you change if you had the choice? </td>
+	    <td> </td>
+		  <td> See comments above.</td>
+	  </tr>
+	  <tr>
+	    <td>How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </td>
+	    <td></td>
+	    <td> See comment above.</td>
+	  </tr>
+	</table>
+	
+	<br><br>
 
 							
 									<hr class="major" />
