Nathans Friends Feedback

--- a/ReportPage.html
+++ b/ReportPage.html
@@ -575,6 +575,76 @@ tr:nth-child(even) {
 	  </tr>
 	</table>
 	
+	<table>
+	  <tr>
+	    <th>Question</th>
+	    <th>Respondent</th>
+	    <th>Answer</th>
+	  </tr>
+
+<tr>
+	    <td> How old are you?</td>
+	    <td><Nathan’s Friend/td>
+	    <td>22</td>
+	  </tr>
+	  <tr>
+	    <td> When was the last time you purchased an item online? </td>
+	    <td></td>
+	    <td>Yesterday</td>
+	  </tr>
+	  <tr>
+	    <td> Have you ever used Choice Charities? </td>
+	    <td> </td>
+	    <td> No</td>
+	  </tr>
+	  <tr>
+	    <td> How often do you shop online? </td>
+	    <td></td>
+	    <td> Couple of times a fortnight.</td>
+	  </tr>
+	  <tr>
+	    <td> How confident are you with browsing, shopping, or other online shopping-related tasks? </td>
+	    <td> </td>
+	    <td> Pretty confident.</td>
+	  </tr>
+	  <tr>
+	    <td> Which device(s) do you usually use for online shopping? </td>
+	    <td> </td>
+	    <td> Mobile phone </td>
+	  </tr>
+	  <tr>
+	    <td>How did you find the experience of using the website to complete the task of selecting a charity and donating? </td>
+	    <td> </td>
+	    <td> Pretty easy to use, the tabs on the webpage made it clear where I needed to go. </td>
+	  </tr>
+	  <tr>
+	    <td> What did you think of the layout of the content ( The map and the layout of the website) ? </td>
+	    <td> </td>
+	    <td>Very creative layout, logo and visual design appealing, also user friendly</td>
+	  </tr>
+	  <tr>
+	    <td> What did you think of the on-page explanations? </td>
+	    <td> </td>
+	    <td> Very easy to read, use and understand</td>
+	  </tr>
+	  <tr>
+	    <td> What was your overall impression of the Choice Charities Website?</td>
+	    <td> </td>
+	    <td> Visually appealing, easy and simple to use.</td>
+	  </tr>
+	  <tr>
+	    <td> What would you change if you had the choice? </td>
+	    <td> </td>
+		  <td> Some functions on the donation page do not work, would be awesome to have pop up windows explaining what the charity focuses on and include a button to donate. The background of this page does not match the rest of the site.</td>
+	  </tr>
+	  <tr>
+	    <td>How would you compare the ease of use to say another charity website, taking into consideration our prototype is in its early stages? </td>
+	    <td></td>
+	    <td>In terms of visuals it looks amazing, just need some tweaks with functionality.</td>
+	  </tr>
+	</table>
+
+	
 	<br><br>
 
 							
