--- a/ReportPage.html
+++ b/ReportPage.html
@@ -643,7 +643,12 @@ tr:nth-child(even) {
 	    <td>In terms of visuals it looks amazing, just need some tweaks with functionality.</td>
 	  </tr>
 	</table>
-
+<p>
+	Our tests fulfilled 3 main criteria using close friends or family, hence black box testing. The 3 main Criteria include the Screening Questions which give us an idea of who exactly is participating in the tests, demographic wise. 
+The next set of questions mainly explored the level of expertise and knowledge the user had with using online shopping/donation experiences, our respondents had a range of responses from barely using a website yet having some knowledge, to an online shopping aficionado. 
+Our wide range of users allowed us to access a wide range of responses so we our website could be marketed to wider segments, always a good thing. 
+The usability tests showed us that our website was attractive, and simple to use. Our main usability concerns were with users not being able to see what charity they selected as this is currently a prototype shortfall, and the tests help us recognise this. Usability meaning to test, test and test again will keep us working on the site’s user experience, so we are the staple of Australian Donation Websites.
+		</p> 
 	
 	<br><br>
 
