--- a/ReportPage.html
+++ b/ReportPage.html
@@ -864,25 +864,25 @@ Codebots.com. 2020. What Are The 10 Biggest Risks In Software Development?. [onl
 	<h2>WireFrames</h2>
 	<p>To work out how we wanted our prototype to look and to give ourselves an idea as to how it would look, we made a number of wireframes in Balsamiq.</p>
 	<p><b>Home Page - Nathan</b></p>
-	<span class="image main"><img src="images/WireFrame1.jpg" alt="" /></span><br>
+	<span class="image main"><img src="images/WireFrame1.JPG" alt="" /></span><br>
 	
 	<p><b>Donation Page - Dillon</b></p>
-	<span class="image main"><img src="images/WireFrame2.jpg" alt="" /></span><br>
+	<span class="image main"><img src="images/WireFrame2.JPG" alt="" /></span><br>
 	
 	<p><b>Login Page - Geoffrey</b></p>
-	<span class="image main"><img src="images/WireFrame3.jpg" alt="" /></span><br>
+	<span class="image main"><img src="images/WireFrame3.JPG" alt="" /></span><br>
 	
 	<p><b>Sign-Up Page - Thomas</b></p>
-	<span class="image main"><img src="images/WireFrame4.jpg" alt="" /></span><br>
+	<span class="image main"><img src="images/WireFrame4.JPG" alt="" /></span><br>
 	
 	<p><b>Payment Page - Adair</b></p>
-	<span class="image main"><img src="images/WireFrame5.jpg" alt="" /></span><br>
+	<span class="image main"><img src="images/WireFrame5.JPG" alt="" /></span><br>
 	
 	<p><b>About Us Page - Nathan</b></p>
-	<span class="image main"><img src="images/WireFrame6.jpg" alt="" /></span><br>
+	<span class="image main"><img src="images/WireFrame6.JPG" alt="" /></span><br>
 	
 	<p><b>Our Team Page - Nathan</b></p>
-	<span class="image main"><img src="images/WireFrame7.jpg" alt="" /></span><br>
+	<span class="image main"><img src="images/WireFrame7.JPG" alt="" /></span><br>
 									
 					
 	<hr class="major" />
